Added record classes. And some refactor.