@@ -34,6 +34,10 @@ compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
 compileJava.dependsOn(processResources)
 
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
 [bootJar, bootRun, bootDistTar, bootDistZip, distTar, distZip]*.enabled = false
 jar.enabled = true
 
@@ -55,6 +59,8 @@ repositories {
 }
 
 test {
+    useJUnitPlatform()
+    jvmArgs(['--enable-preview'])
     testLogging {
         exceptionFormat = 'full'
         events = ["STARTED", "PASSED", "SKIPPED", "FAILED"]
